RESOLVED FIXED56896
Assertion and incorrect rendering of counters.
https://bugs.webkit.org/show_bug.cgi?id=56896
Summary Assertion and incorrect rendering of counters.
Carol Szabo
Reported 2011-03-22 21:09:23 PDT
Created attachment 86566 [details] Test Case When multiple displays are assigned to the same counter i.e. like in this case: #testView:before { content: "First Counter:" counters(test, ".") " Second Counter:" counters(test, "."); } And the counter value changes, only the first display is invalidated. Which causes the second display to show the wrong value and a debug mode assertion on page tear down. The error is in CounterNode::resetCounters which iterates the list of display renderers incorrectly.
Attachments
Test Case (1.29 KB, text/html)
2011-03-22 21:09 PDT, Carol Szabo
no flags
Proposed patch. (6.21 KB, patch)
2011-03-22 22:36 PDT, Carol Szabo
hyatt: review+
Proposed patch. Added comment at David Hyatt's suggestion. (6.21 KB, patch)
2011-03-23 15:47 PDT, Carol Szabo
no flags
Carol Szabo
Comment 1 2011-03-22 22:36:24 PDT
Created attachment 86571 [details] Proposed patch.
Dave Hyatt
Comment 2 2011-03-23 12:18:35 PDT
Comment on attachment 86571 [details] Proposed patch. r=me
Carol Szabo
Comment 3 2011-03-23 15:47:12 PDT
Created attachment 86713 [details] Proposed patch. Added comment at David Hyatt's suggestion.
WebKit Commit Bot
Comment 4 2011-03-23 19:25:23 PDT
Comment on attachment 86713 [details] Proposed patch. Added comment at David Hyatt's suggestion. Clearing flags on attachment: 86713 Committed r81844: <http://trac.webkit.org/changeset/81844>
WebKit Commit Bot
Comment 5 2011-03-23 19:25:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.