Source/WebCore/rendering/CounterNode.h
@@ -43,7 +43,7 @@ class RenderCounter;
 class CounterNode : public RefCounted<CounterNode> {
 public:
     static PassRefPtr<CounterNode> create(RenderObject*, bool isReset, int value);
-
+    ~CounterNode();
     bool actsAsReset() const { return m_hasResetType || !m_parent; }
     bool hasResetType() const { return m_hasResetType; }
     int value() const { return m_value; }
